Fix card description on IE11

--- a/src/components/_card.scss
+++ b/src/components/_card.scss
@@ -29,6 +29,7 @@
   &__description {
     font-size: $font-size-card-descr;
     text-align: center;
+    max-width: 230px;
   }
   &__icon {
     width: 50px;
