--- a/static/main.css
+++ b/static/main.css
@@ -834,7 +834,8 @@ a {
     margin-bottom: 15px; }
   .card__description {
     font-size: 14px;
-    text-align: center; }
+    text-align: center;
+    max-width: 230px; }
   .card__icon {
     width: 50px;
     height: 50px;
